<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/bbb"
    tools:context=".Activity.SignUpActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="148dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/registericon" />


    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="Create New Account"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="33dp"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        tools:layout_editor_absoluteX="10dp">

        <EditText
            android:id="@+id/user_regis"
            android:layout_width="match_parent"
            android:layout_marginTop="7dp"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_background"
            android:paddingLeft="20dp"
            android:hint="@string/user"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_marginTop="7dp"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_background"
            android:paddingLeft="20dp"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_marginTop="7dp"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_background"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:hint="@string/password"/>

        <EditText
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_marginTop="7dp"
            android:inputType="textPassword"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_background"
            android:paddingLeft="20dp"
            android:hint="@string/conf"/>


    </LinearLayout>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn"
        android:onClick="goToHome"
        android:padding="20dp"
        android:text="@string/reg"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.167" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/register_btn"
        tools:layout_editor_absoluteX="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sudahtxt"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/backsign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goToHome"
            android:textColor="@color/teal_200"
            android:text="@string/sudah"
            android:textSize="18sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>